--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Launch Tests with Maven
-        run: mvn clean test
+      - name: Start application
+        run: mvn spring-boot:run
