--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,4 +40,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api-uwu
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api-uwu:latest
