--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,8 +31,8 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       -
-        name: set up docker build
-        run: docker build . --file Dockerfile --tag api-uwu:$(date +%s)
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       -
         name: Build and push
         uses: docker/build-push-action@v2
