--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,8 +32,13 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       -
         name: set up docker build
-        run: docker build . --file Dockerfile --tag api-uwu
+        run: docker build . --file Dockerfile --tag api-uwu:$(date +%s)
       -
-        name: push
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/api-uwu
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api-uwu:latest
         
