--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       run : |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD      
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/api
+      run: docker image build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/api
     
     - name: Docker Push
-      run: docker image push ${{ secrets.DOCKER_HUB_USERNAME }}/api
+      run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/api
