--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: docker login
       env: 
-        DOCKER_USER: ${{ secrets.DOCKERim_HUB_USERNAME }}
+        DOCKER_USER: ${{ secrets.DOCKER_HUB_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       run : |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD      
@@ -24,4 +24,4 @@ jobs:
       run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/api
     
     - name: Docker Push
-      run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/api
+      run: docker image push ${{ secrets.DOCKER_HUB_USERNAME }}/api
